[tool:pytest]
python_files = composeml/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
exclude = docs/*
ignore = E501,W504 # line too long error, line break after binary operator
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
forced_separate=composeml
# vertical hanging indent
multi_line_output=3
