[metadata]
name = composeml
version = attr: composeml.version.__version__
url = https://github.com/alteryx/compose
download_url = https://pypi.org/project/composeml/
project_urls =
    Documentation = https://compose.alteryx.com
    Source Code = https://github.com/alteryx/compose/
    Changes = https://compose.alteryx.com/en/latest/release_notes.html
    Issue Tracker = https://github.com/alteryx/compose/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA
author = Alteryx, Inc.
author_email = open_source_support@alteryx.com
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
license = BSD 3-clause
long_description = file: README.md
long_description_content_type = text/markdown
keywords = prediction engineering, data, science, machine learning
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    pandas >= 1.3.0
    tqdm >= 4.32.0
    matplotlib >= 3.3.3
    seaborn >= 0.11.0
python_requires = >=3.8, <4

[options.extras_require]
dev =
    codecov == 2.1.12
    flake8 == 4.0.1
    isort == 5.9.3
    black == 22.3.0
    nbsphinx == 0.8.7
    pydata-sphinx-theme == 0.7.1
    Sphinx == 4.2.0
    sphinx-inline-tabs == 2022.1.2b11
    sphinx-copybutton == 0.4.0
    myst-parser == 0.16.1
    nbconvert == 6.4.5
    ipython == 7.31.1
    pygments == 2.10.0
    jupyter == 1.0.0
    pandoc == 1.1.0
    ipykernel == 6.4.2
    scikit-learn >= 0.20.0, !=0.22
    %(test)s
test =
    pip >= 21.3.1
    pytest == 7.1.2
    pytest-cov == 3.0.0
    pytest-xdist >= 2.5.0
    wheel >= 0.33.1
    featuretools >= 1.4.0
    woodwork >= 0.11.0
    pyarrow >= 3.0.0
docs =
    evalml >= 0.45.0
update_checker =
    alteryx-open-src-update-checker >= 2.0.0
complete =
    %(update_checker)s

[options.package_data]
* =
    *.txt
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[aliases]
test=pytest

[tool:pytest]
addopts = --doctest-modules
python_files = composeml/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503 # line too long error, line break after and before binary operator

[isort]
profile=black
forced_separate=composeml
known_first_party=composeml
skip=__init__.py
# vertical hanging indent
multi_line_output=3
